--- a/content/publication/example/cite.bib
+++ b/content/publication/example/cite.bib
@@ -1,8 +1,9 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
-}
+@INPROCEEDINGS{10011472,
+  author={Adigun, Jubril Gbolahan and Eisele, Linus and Felderer, Michael},
+  booktitle={2022 48th Euromicro Conference on Software Engineering and Advanced Applications (SEAA)}, 
+  title={Metamorphic Testing in Autonomous System Simulations}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={330-337},
+  doi={10.1109/SEAA56994.2022.00059}}
