--- a/content/publication/cais/cite.bib
+++ b/content/publication/cais/cite.bib
@@ -1,9 +1,9 @@
-@INPROCEEDINGS{10011472,
-  author={Adigun, Jubril Gbolahan and Eisele, Linus and Felderer, Michael},
-  booktitle={2022 48th Euromicro Conference on Software Engineering and Advanced Applications (SEAA)}, 
-  title={Metamorphic Testing in Autonomous System Simulations}, 
+@ARTICLE{9734302,
+  author={Adigun, Jubril Gbolahan and Camilli, Matteo and Felderer, Michael and Giusti, Andrea and Matt, Dominik T. and Perini, Anna and Russo, Barbara and Susi, Angelo},
+  journal={Computer}, 
+  title={Collaborative Artificial Intelligence Needs Stronger Assurances Driven by Risks}, 
   year={2022},
-  volume={},
-  number={},
-  pages={330-337},
-  doi={10.1109/SEAA56994.2022.00059}}
+  volume={55},
+  number={3},
+  pages={52-63},
+  doi={10.1109/MC.2021.3131990}}
